# redisense

./: DOCKER.md  Dockerfile  ERROR_FIXED.md  FASTAPI_README.md  MIGRATION_GUIDE.md  PAGES_FIXED.md  README.md  SETUP_COMPLETE.md  SPECIFICATIONS.md  VECTOR_SEARCH.md  cli.py  demo_fastapi.py  docker-compose.redis-stack.yml  docker-compose.redisinsight.yml  docker-compose.yml  docker.sh  main.py  pyproject.toml  quick_start.py  start_web.sh  test_app.py  test_fastapi.py  test_setup.py  test_vector_search.py  web_app.py
app/: main.py
app/models/: schemas.py
app/routes/: anomalies.py  devices.py  energy.py  search.py
app/services/: ai_service.py  redis_service.py
config/: settings.py
dashboard/: background_stream.py  streamlit_app.py
data/: generator.py
tests/: conftest.py
tests/integration/: test_api.py  test_redis_service.py
tests/unit/: test_ai_service.py  test_config.py  test_models.py
web/static/css/: dashboard.css
web/static/js/: dashboard.js
web/templates/: admin.html  analytics.html  base.html  dashboard.html  device_detail.html  devices.html  error.html  search.html
